add detail of index's products

--- a/detail/50ccWaveDealimDo.html
+++ b/detail/50ccWaveDealimDo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>50cc Dealim Đỏ</title>
+    <title>HONDA FUTURE 125 FI</title>
     <link rel="shortcut icon" href="../assets/image/icon/icon.png">
     <link rel="stylesheet" href="../assets/css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -234,7 +234,7 @@
                     <li><a href="">Dealim</a></li>
                 </ul>
             </div>
-            <div class="bike-title">Honda Wave 50cc Dealim Đỏ</div>
+            <div class="bike-title">HONDA WAVE 50CC DEALIM</div>
             <div class="bike-main">
                 <img src="../assets/image/hinhxemay/Hình xemay/Daelim1.png" alt="" class="bike-img">
                 <div class="bike-detail">
@@ -242,9 +242,9 @@
                     <table class="bike-detail__table">
                         <tr>
                             <td>Dòng xe</td>
-                            <td>Honda Wave 50cc Dealim</td>
-                            <td>Đã đi</td>
-                            <td>25 000 - 29 999 km</td>
+                            <td>Wave Dealim</td>
+                            <td>Hãng xe</td>
+                            <td>Honda</td>
                         </tr>
                         <tr>
                             <td>Xuất xứ</td>
@@ -260,7 +260,7 @@
                         </tr>
                         <tr>
                             <td>Màu</td>
-                            <td>Đen đỏ</td>
+                            <td>Đỏ</td>
                             <td>Ngày đăng</td>
                             <td>2 ngày trước</td>
                         </tr>
@@ -274,46 +274,46 @@
             <div class="list_container">
                 <ul class="motor_list">
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
+                        <a href="../detail/xeMayHondaFuture125FI.html"><img src="../assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
+                        <a href="../detail/xeMayHondaFuture125FI.html" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
                         <p class="price">31.390.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
+                        <a href="../detail/SYMAttila50cc.html"><img src="../assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
+                        <a href="../detail/SYMAttila50cc.html" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
                         <p class="price">25.700.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
+                        <a href="../detail/CUB81DAELIMSAVINA.html"><img src="../assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
+                        <a href="../detail/CUB81DAELIMSAVINA.html" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
                         <p class="price">14.300.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
+                        <a href="../detail/MOTOTHETHAOYAMAHA.html"><img src="../assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
+                        <a href="../detail/MOTOTHETHAOYAMAHA.html" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
                         <p class="price">129.000.000 VNĐ</p>
                     </li>
                 </ul>
                 <br>
                 <ul class="motor_list">
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">BENELLI VZ125i ĐỎ</a>
+                        <a href="../detail/BENELLIVZ125iDO.html"><img src="../assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
+                        <a href="../detail/BENELLIVZ125iDO.html" class="motor_name">BENELLI VZ125i ĐỎ</a>
                         <p class="price">23.999.000 VNĐ</p>
                     </li>       
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">BMW M1000RR 2022</a>
+                        <a href="../detail/BMWM1000RR2022.html"><img src="../assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
+                        <a href="../detail/BMWM1000RR2022.html" class="motor_name">BMW M1000RR 2022</a>
                         <p class="price">1.600.000.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">YAMAHA GSX-S150</a>
+                        <a href="../detail/YAMAHAGSXS150.html"><img src="../assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
+                        <a href="../detail/YAMAHAGSXS150.html" class="motor_name">YAMAHA GSX-S150</a>
                         <p class="price">64.400.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="../assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
+                        <a href="../detail/MOTODUCATIMVAGUSTA.html"><img src="../assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
+                        <a href="../detail/MOTODUCATIMVAGUSTA.html" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
                         <p class="price">26.500.000 VNĐ</p>
                     </li>
                 </ul>
