--- a/xe50cc.html
+++ b/xe50cc.html
@@ -231,91 +231,90 @@
                 <br>
                 <ul class="menu">
                     <li class="menu_motor_type">
-                        <a href="xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
+                        <a href="xetayga.html"><img class="type" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
                         <br>
                         <a href="xetayga.html" class="ct_name">Xe tay ga</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
+                        <a href="xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xeso.html" class="ct_name_2">Xe số</a>
+                        <a href="xeso.html" class="ct_name">Xe số</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
+                        <a href="xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xemoto.html" class="ct_name_3">Xe motor</a>
+                        <a href="xemoto.html" class="ct_name">Xe motor</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
+                        <a href="xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xe50cc.html" class="ct_name_4">Xe 50cc</a>
+                        <a href="xe50cc.html" class="ct_name">Xe 50cc</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
+                        <a href="xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
+                        <a href="xecontay.html" class="ct_name">Xe côn tay</a>
                     </li>
                 </ul>
                 <h3 class="ct_list">Xe 50cc</h3>
                 <div id="list_container">
-                    <ul id="motor_list_1">
-                        <li class="product_1">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Daelim1.png" alt="" class="sample_1"></a>
+                    <ul class="motor_list">
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Daelim1.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MÁY 50CC WAVE DAELIM ĐỎ</a>
-                            <p class="price_1">14.450.000 VNĐ</p>
+                            <p class="price">14.450.000 VNĐ</p>
                         </li>
-                        <li class="product_2">
-                            <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample_2"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
-                            <p class="price_2">25.700.000 VNĐ</p>
+                            <p class="price">25.700.000 VNĐ</p>
                         </li>
-                        <li class="product_3">
-                            <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample_3"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA <br> <center>CB50</center></a>
-                            <p class="price_3">14.300.000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA CB50</a>
+                            <p class="price">14.300.000 VNĐ</p>
                         </li>
-                        <li class="product_4">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM6.jpg" alt="" class="sample_4"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM6.jpg" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">SYM Xe máy 50cc Elite & Thông số</a>
-                            <p class="price_4">16.785.000 VNĐ</p>
+                            <p class="price">16.785.000 VNĐ</p>
                         </li>
                     </ul>
                     <br>
-                    <ul id="motor_list_2">
-                        <li class="product_1">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Honda6.png" alt="" class="sample_1"></a>
+                    <ul class="motor_list">
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Honda6.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MÁY 50CC CUB HONDA LITTLE</a>
-                            <p class="price_1">13.000.000 VNĐ</p>
+                            <p class="price">13.000.000 VNĐ</p>
                         </li>       
-                        <li class="product_2">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Daelim3.png" alt="" class="sample_2"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Daelim3.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MÁY 50CC WAVE DAELIM ĐEN</a>
-                            <p class="price_4">14.500.000 VNĐ</p>
+                            <p class="price">14.500.000 VNĐ</p>
                         </li>
-                        <li class="product_3">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM7.jpg" alt="" class="sample_3"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM7.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_2">XE MÁY 50CC ANGELA <br><center>CHÍNH HÃNG SYM</center></a>
-                            <p class="price_3">16.900.000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY 50CC ANGELA CHÍNH HÃNG SYM</a>
+                            <p class="price">16.900.000 VNĐ</p>
                         </li>
-                        <li class="product_4">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/YAMAHA3.jpg" alt="" class="sample_4"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/YAMAHA3.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_1">XE MÁY 50CC SIRIUS</a>
-                            <p class="price_1">16,500,000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY 50CC SIRIUS</a>
+                            <p class="price">16,500,000 VNĐ</p>
                         </li>
                     </ul>
                 </div>
-                <br>
                 <div id="next_btn">
                     <a href="#" class="desc_show_more">Xem thêm sản phẩm
-                        <ion-icon name="chevron-down-outline"></ion-icon>
+                        <ion-icon class="dropdown-icon" name="chevron-down-outline"></ion-icon>
                     </a>
                 </div>
             </div>
