--- a/xeso.html
+++ b/xeso.html
@@ -231,91 +231,91 @@
                 <br>
                 <ul class="menu">
                     <li class="menu_motor_type">
-                        <a href="xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
+                        <a href="./xetayga.html"><img class="type" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
                         <br>
-                        <a href="xetayga.html" class="ct_name">Xe tay ga</a>
+                        <a href="./xetayga.html" class="ct_name">Xe tay ga</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
+                        <a href="./xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xeso.html" class="ct_name_2">Xe số</a>
+                        <a href="./xeso.html" class="ct_name">Xe số</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
+                        <a href="./xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xemoto.html" class="ct_name_3">Xe motor</a>
+                        <a href="./xemoto.html" class="ct_name">Xe motor</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
+                        <a href="./xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xe50cc.html" class="ct_name_4">Xe 50cc</a>
+                        <a href="./xe50cc.html" class="ct_name">Xe 50cc</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
+                        <a href="./xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
+                        <a href="./xecontay.html" class="ct_name">Xe côn tay</a>
                     </li>
                 </ul>
                 <h3 class="ct_list">Xe số</h3>
                 <div id="list_container">
-                    <ul id="motor_list_1">
-                        <li class="product_1">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Daelim1.png" alt="" class="sample_1"></a>
+                    <ul class="motor_list">
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Daelim1.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI <br> <center>VÀNH ĐÚC</center></a>
-                            <p class="price_1">31.390.000 VNĐ</p>
+                            <p class="price">31.390.000 VNĐ</p>
                         </li>
-                        <li class="product_2">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Honda2.png" alt="" class="sample_2"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/Honda2.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE SỐ HONDA FUTURE 125 FI <br><center>VÀNH NAN HOA</center></a>
-                            <p class="price_2">25.700.000 VNĐ</p>
+                            <p class="price">25.700.000 VNĐ</p>
                         </li>
-                        <li class="product_3">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/YAMAHA4.png" alt="" class="sample_3"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/YAMAHA4.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">EXCITER 155 VVA PHIÊN BẢN GP</a>
-                            <p class="price_3">50.790.000 VNĐ</p>
+                            <p class="price">50.790.000 VNĐ</p>
                         </li>
-                        <li class="product_4">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/YAMAHA5.png" alt="" class="sample_4"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/YAMAHA5.png" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_2">JUPITER FI PHIÊN BẢN <br> <center>TIÊU CHUẨN</center></a>
-                            <p class="price_4">29.100.000 VNĐ</p>
+                            <a href="#" class="motor_name">JUPITER FI PHIÊN BẢN <br> <center>TIÊU CHUẨN</center></a>
+                            <p class="price">29.100.000 VNĐ</p>
                         </li>
                     </ul>
                     <br>
-                    <ul id="motor_list_2">
-                        <li class="product_1">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM2.jpg" alt="" class="sample_1"></a>
+                    <ul class="motor_list">
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM2.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">XE MÁY NEW GALAXY 125</a>
-                            <p class="price_1">26.500.000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY NEW GALAXY 125</a>
+                            <p class="price">26.500.000 VNĐ</p>
                         </li>       
-                        <li class="product_2">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM1.jpg" alt="" class="sample_2"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM1.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">XE MÁY ELEGANT 110+ <br><center> YÊN RỜI</center></a>
-                            <p class="price_4">17.300.000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY ELEGANT 110+ <br><center> YÊN RỜI</center></a>
+                            <p class="price">17.300.000 VNĐ</p>
                         </li>
-                        <li class="product_3">
-                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM8.jpg" alt="" class="sample_3"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Hình xemay/SYM8.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">XE MÁY SYM ANGELA 50</a>
-                            <p class="price_3">16.800.000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY SYM ANGELA 50</a>
+                            <p class="price">16.800.000 VNĐ</p>
                         </li>
-                        <li class="product_4">
-                            <a href="#"><img src="./assets/image/hinhxemay/SYM6.jpg" alt="" class="sample_4"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/SYM6.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">XE MÁY SYM STAR SR 170</a>
-                            <p class="price_1">52.400.000 VNĐ</p>
+                            <a href="#" class="motor_name">XE MÁY SYM STAR SR 170</a>
+                            <p class="price">52.400.000 VNĐ</p>
                         </li>
                     </ul>
                 </div>
                 <br>
                 <div id="next_btn">
                     <a href="#" class="desc_show_more">Xem thêm sản phẩm
-                        <ion-icon name="chevron-down-outline"></ion-icon>
+                        <ion-icon class="dropdown-icon" name="chevron-down-outline"></ion-icon>
                     </a>
                 </div>
             </div>
