--- a/xetayga.html
+++ b/xetayga.html
@@ -235,92 +235,92 @@
                     <h4 class="ct_type">Loại xe</h4>
                     <br>
                     <ul class="menu">
-                        <li class="menu_motor_type">
-                            <a href="xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
-                            <br>
-                            <a href="xetayga.html" class="ct_name">Xe tay ga</a>
-                        </li>
-                        <li class="menu_motor_type">
-                            <a href="xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
-                            <br>
-                            <a href="xeso.html" class="ct_name_2">Xe số</a>
-                        </li>
-                        <li class="menu_motor_type">
-                            <a href="xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
-                            <br>
-                            <a href="xemoto.html" class="ct_name_3">Xe motor</a>
-                        </li>
-                        <li class="menu_motor_type">
-                            <a href="xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
-                            <br>
-                            <a href="xe50cc.html" class="ct_name_4">Xe 50cc</a>
-                        </li>
-                        <li class="menu_motor_type">
-                            <a href="xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
-                            <br>
-                            <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
-                        </li>
-                    </ul>
+                <li class="menu_motor_type">
+                    <a href="./xetayga.html"><img class="type" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
+                    <br>
+                    <a href="./xetayga.html" class="ct_name">Xe tay ga</a>
+                </li>
+                <li class="menu_motor_type">
+                    <a href="./xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type"></a>
+                    <br>
+                    <a href="./xeso.html" class="ct_name">Xe số</a>
+                </li>
+                <li class="menu_motor_type">
+                    <a href="./xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type"></a>
+                    <br>
+                    <a href="./xemoto.html" class="ct_name">Xe motor</a>
+                </li>
+                <li class="menu_motor_type">
+                    <a href="./xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type"></a>
+                    <br>
+                    <a href="./xe50cc.html" class="ct_name">Xe 50cc</a>
+                </li>
+                <li class="menu_motor_type">
+                    <a href="./xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type"></a>
+                    <br>
+                    <a href="./xecontay.html" class="ct_name">Xe côn tay</a>
+                </li>
+            </ul>
                     <h3 class="ct_list">Xe tay ga</h3>
                     <div id="list_container">
-                        <ul id="motor_list_1">
-                            <li class="product_1">
-                                <a href="#"><img src="./assets/image/hinhxemay/Vision.png" alt="" class="sample_1"></a>
+                        <ul class="motor_list">
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Vision.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">XE TAY GA HONDA VISION</a>
-                                <p class="price_1">30.230.182 VNĐ</p>
+                                <a href="#" class="motor_name">XE TAY GA HONDA VISION</a>
+                                <p class="price">30.230.182 VNĐ</p>
                             </li>
-                            <li class="product_2">
-                                <a href="#"><img src="./assets/image/hinhxemay/Honda4.png" alt="" class="sample_2"></a>
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Honda4.png" alt="" class="sample"></a>
                                 <br>
                                 <a href="#" class="motor_name">XE TAY GA HONDA SH125i/150i</a>
-                                <p class="price_2">71.957.455 VNĐ</p>
+                                <p class="price">71.957.455 VNĐ</p>
                             </li>
-                            <li class="product_3">
-                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha3.png" alt="" class="sample_3"></a>
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha3.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">GRANDE BLUE CORE HYBRID <br><center>PHIÊN BẢN ĐẶC BIỆT</center></a>
-                                <p class="price_3">49.100.000 VNĐ</p>
+                                <a href="#" class="motor_name">GRANDE BLUE CORE HYBRID <br><center>PHIÊN BẢN ĐẶC BIỆT</center></a>
+                                <p class="price">49.100.000 VNĐ</p>
                             </li>
-                            <li class="product_4">
-                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha4.png" alt="" class="sample_4"></a>
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha4.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">JANUS PHIÊN BẢN ĐẶC BIỆT</a>
-                                <p class="price_4">31.400.000 VNĐ</p>
+                                <a href="#" class="motor_name">JANUS PHIÊN BẢN ĐẶC BIỆT</a>
+                                <p class="price">31.400.000 VNĐ</p>
                             </li>
                         </ul>
                         <br>
-                        <ul id="motor_list_2">
-                            <li class="product_1">
-                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha5.png" alt="" class="sample_1"></a>
+                        <ul class="motor_list">
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha5.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">XE TAY GA SYM ATTILA 50</a>
-                                <p class="price_1">25.700.000 VNĐ</p>
+                                <a href="#" class="motor_name">XE TAY GA SYM ATTILA 50</a>
+                                <p class="price">25.700.000 VNĐ</p>
                             </li>       
-                            <li class="product_2">
-                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha6.png" alt="" class="sample_2"></a>
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Yamaha6.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">XE TAY GA SYM PASSING 50</a>
-                                <p class="price_1">24.200.000 VNĐ</p>
+                                <a href="#" class="motor_name">XE TAY GA SYM PASSING 50</a>
+                                <p class="price">24.200.000 VNĐ</p>
                             </li>
-                            <li class="product_3">
-                                <a href="#"><img src="./assets/image/hinhxemay/Piaggio.png" alt="" class="sample_3"></a>
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Piaggio.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">XE TAY GA PIAGGIO ZIP 100</a>
-                                <p class="price_3">35,350,000 VNĐ</p>
+                                <a href="#" class="motor_name">XE TAY GA PIAGGIO ZIP 100</a>
+                                <p class="price">35,350,000 VNĐ</p>
                             </li>
-                            <li class="product_4">
-                                <a href="#"><img src="./assets/image/hinhxemay/Shmode 125cc.png" alt="" class="sample_4"></a>
+                            <li class="product">
+                                <a href="#"><img src="./assets/image/hinhxemay/Shmode 125cc.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_3">HONDA SH MODE 125CC</a>
-                                <p class="price_1">54.186.545 VNĐ</p>
+                                <a href="#" class="motor_name">HONDA SH MODE 125CC</a>
+                                <p class="price">54.186.545 VNĐ</p>
                             </li>
                         </ul>
                     </div>
                     <br>
                     <div id="next_btn">
                         <a href="#" class="desc_show_more">Xem thêm sản phẩm
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon class="dropdown-icon" name="chevron-down-outline"></ion-icon>
                         </a>
                     </div>
                 </div>
