--- a/index.html
+++ b/index.html
@@ -236,75 +236,75 @@
             <br>
             <ul class="menu">
                 <li class="menu_motor_type">
-                    <a href="./xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
+                    <a href="./xetayga.html"><img class="type" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
                     <br>
                     <a href="./xetayga.html" class="ct_name">Xe tay ga</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="./xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
+                    <a href="./xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type"></a>
                     <br>
-                    <a href="./xeso.html" class="ct_name_2">Xe số</a>
+                    <a href="./xeso.html" class="ct_name">Xe số</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="./xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
+                    <a href="./xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type"></a>
                     <br>
-                    <a href="./xemoto.html" class="ct_name_3">Xe motor</a>
+                    <a href="./xemoto.html" class="ct_name">Xe motor</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="./xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
+                    <a href="./xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type"></a>
                     <br>
-                    <a href="./xe50cc.html" class="ct_name_4">Xe 50cc</a>
+                    <a href="./xe50cc.html" class="ct_name">Xe 50cc</a>
                 </li>
                 <li class="menu_motor_type">
-                    <a href="./xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
+                    <a href="./xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type"></a>
                     <br>
-                    <a href="./xecontay.html" class="ct_name_5">Xe côn tay</a>
+                    <a href="./xecontay.html" class="ct_name">Xe côn tay</a>
                 </li>
             </ul>
             <h3 class="ct_list">Bạn có thể thích</h3>
             <div class="list_container">
                 <ul class="motor_list">
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
+                        <a href="./detail/xeMayHondaFuture125FI.html"><img src="./assets/image/hinhxemay/honda1.png" alt="" class="sample"></a>
+                        <a href="./detail/xeMayHondaFuture125FI.html" class="motor_name">XE MÁY HONDA FUTURE 125 FI</a>
                         <p class="price">31.390.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
+                        <a href="./detail/SYMAttila50cc.html"><img src="./assets/image/hinhxemay/SYM5.png" alt="" class="sample"></a>
+                        <a href="./detail/SYMAttila50cc.html" class="motor_name">XE MÁY TAY GA SYM ATTILA 50CC</a>
                         <p class="price">25.700.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
+                        <a href="./detail/CUB81DAELIMSAVINA.html"><img src="./assets/image/hinhxemay/Daelim2.png" alt="" class="sample"></a>
+                        <a href="./detail/CUB81DAELIMSAVINA.html" class="motor_name">XE MÁY CUB 81 DAELIM SAVINA</a>
                         <p class="price">14.300.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
+                        <a href="./detail/MOTOTHETHAOYAMAHA.html"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
+                        <a href="./detail/MOTOTHETHAOYAMAHA.html" class="motor_name">MÔ TÔ THỂ THAO YAMAHA</a>
                         <p class="price">129.000.000 VNĐ</p>
                     </li>
                 </ul>
                 <br>
                 <ul class="motor_list">
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">BENELLI VZ125i ĐỎ</a>
+                        <a href="./detail/BENELLIVZ125iDO.html"><img src="./assets/image/hinhxemay/benelli2.png" alt="" class="sample"></a>
+                        <a href="./detail/BENELLIVZ125iDO.html" class="motor_name">BENELLI VZ125i ĐỎ</a>
                         <p class="price">23.999.000 VNĐ</p>
                     </li>       
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">BMW M1000RR 2022</a>
+                        <a href="./detail/BMWM1000RR2022.html"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
+                        <a href="./detail/BMWM1000RR2022.html" class="motor_name">BMW M1000RR 2022</a>
                         <p class="price">1.600.000.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">YAMAHA GSX-S150</a>
+                        <a href="./detail/YAMAHAGSXS150.html"><img src="./assets/image/hinhxemay/Suzuki4.jpg" alt="" class="sample"></a>
+                        <a href="./detail/YAMAHAGSXS150.html" class="motor_name">YAMAHA GSX-S150</a>
                         <p class="price">64.400.000 VNĐ</p>
                     </li>
                     <li class="product">
-                        <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
-                        <a href="#" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
+                        <a href="./detail/MOTODUCATIMVAGUSTA.html"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
+                        <a href="./detail/MOTODUCATIMVAGUSTA.html" class="motor_name">MÔ TÔ DUCATI MV AGUSTA</a>
                         <p class="price">26.500.000 VNĐ</p>
                     </li>
                 </ul>
