--- a/xemoto.html
+++ b/xemoto.html
@@ -231,91 +231,91 @@
                 <br>
                 <ul class="menu">
                     <li class="menu_motor_type">
-                        <a href="xetayga.html"><img class="type_1" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
+                        <a href="./xetayga.html"><img class="type" src="./assets/image/motor-type/scooter.jpg" alt=""></a>
                         <br>
-                        <a href="xetayga.html" class="ct_name">Xe tay ga</a>
+                        <a href="./xetayga.html" class="ct_name">Xe tay ga</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type_2"></a>
+                        <a href="./xeso.html"><img src="./assets/image/motor-type/bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xeso.html" class="ct_name_2">Xe số</a>
+                        <a href="./xeso.html" class="ct_name">Xe số</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type_3"></a>
+                        <a href="./xemoto.html"><img src="./assets/image/motor-type/sport_bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xemoto.html" class="ct_name_3">Xe motor</a>
+                        <a href="./xemoto.html" class="ct_name">Xe motor</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type_4"></a>
+                        <a href="./xe50cc.html"><img src="./assets/image/motor-type/50cc_bike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xe50cc.html" class="ct_name_4">Xe 50cc</a>
+                        <a href="./xe50cc.html" class="ct_name">Xe 50cc</a>
                     </li>
                     <li class="menu_motor_type">
-                        <a href="xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type_5"></a>
+                        <a href="./xecontay.html"><img src="./assets/image/motor-type/motorbike.jpg" alt="" class="type"></a>
                         <br>
-                        <a href="xecontay.html" class="ct_name_5">Xe côn tay</a>
+                        <a href="./xecontay.html" class="ct_name">Xe côn tay</a>
                     </li>
                 </ul>
                 <h3 class="ct_list">Xe Motor</h3>
                 <div id="list_container">
-                    <ul id="motor_list_1">
-                        <li class="product_1">
-                            <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample_1"></a>
+                    <ul class="motor_list">
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Ducati3.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">MÔ TÔ DUCATI MV AGUSTA <br> <center>U1 MINI 110CC</center></a>
-                            <p class="price_1">26.500.000 VNĐ</p>
+                            <a href="#" class="motor_name">MÔ TÔ DUCATI MV AGUSTA U1 MINI 110CC</a>
+                            <p class="price">26.500.000 VNĐ</p>
                         </li>
-                        <li class="product_2">
-                            <a href="#"><img src="./assets/image/hinhxemay/Ducati2.jpg" alt="" class="sample_2"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/Ducati2.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">MÔ TÔ DUCATI MONSTER <br><center>MINI 110</center></a>
-                            <p class="price_2">29.900.000 VNĐ</p>
+                            <a href="#" class="motor_name">MÔ TÔ DUCATI MONSTER MINI 110</a>
+                            <p class="price">29.900.000 VNĐ</p>
                         </li>
-                        <li class="product_3">
-                            <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample_3"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/yamaha2.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_3">MÔ TÔ THỂ THAO YAMAHA <br><center>YZF-R3</center></a>
-                            <p class="price_3">129.000.000 VNĐ</p>
+                            <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA YZF-R3</a>
+                            <p class="price">129.000.000 VNĐ</p>
                         </li>
-                        <li class="product_4">
-                            <a href="#"><img src="./assets/image/hinhxemay/YAMAHA1.jpg" alt="" class="sample_4"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/YAMAHA1.jpg" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">MÔ TÔ THỂ THAO YAMAHA MT-03</a>
-                            <p class="price_4">124.000.000 VNĐ</p>
+                            <p class="price">124.000.000 VNĐ</p>
                         </li>
                     </ul>
                     <br>
-                    <ul id="motor_list_2">
-                        <li class="product_1">
-                            <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample_2"></a>
+                    <ul class="motor_list">
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/BMW1.png" alt="" class="sample"></a>
                                 <br>
-                                <a href="#" class="motor_name_2">BMW M1000RR 2022</a>
-                                <p class="price_5">1.600.000.000 VNĐ</p>
+                                <a href="#" class="motor_name">BMW M1000RR 2022</a>
+                                <p class="price">1.600.000.000 VNĐ</p>
                         </li>       
-                        <li class="product_2">
-                            <a href="#"><img src="./assets/image/hinhxemay/BMW2.jpg" alt="" class="sample_2"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/BMW2.jpg" alt="" class="sample"></a>
                             <br>
-                            <a href="#" class="motor_name_2">BMW M1000RR 2022</a>
-                            <p class="price_4">669.000.000 VNĐ</p>
+                            <a href="#" class="motor_name">BMW M1000RR 2022</a>
+                            <p class="price">669.000.000 VNĐ</p>
                         </li>
-                        <li class="product_3">
-                            <a href="#"><img src="./assets/image/hinhxemay/SUZUKI1.png" alt="" class="sample_3"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/SUZUKI1.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MOTOR SUZUKI BANDIT 150</a>
-                            <p class="price_3">68.900.000 VNĐ</p>
+                            <p class="price">68.900.000 VNĐ</p>
                         </li>
-                        <li class="product_4">
-                            <a href="#"><img src="./assets/image/hinhxemay/SUZUKI2.png" alt="" class="sample_4"></a>
+                        <li class="product">
+                            <a href="#"><img src="./assets/image/hinhxemay/SUZUKI2.png" alt="" class="sample"></a>
                             <br>
                             <a href="#" class="motor_name">XE MOTOR SUZUKI GSX-R150</a>
-                            <p class="price_1">71.990.000 VNĐ</p>
+                            <p class="price">71.990.000 VNĐ</p>
                         </li>
                     </ul>
                 </div>
                 <br>
                 <div id="next_btn">
                     <a href="#" class="desc_show_more">Xem thêm sản phẩm
-                        <ion-icon name="chevron-down-outline"></ion-icon>
+                        <ion-icon class="dropdown-icon" name="chevron-down-outline"></ion-icon>
                     </a>
                 </div>
             </div>
