--- a/detail/BENELLIVZ125iDO.html
+++ b/detail/BENELLIVZ125iDO.html
@@ -229,7 +229,7 @@
             <div class="breadcrumbs">
                 <ul>
                     <li><a href="../index.html">Trang chủ</a></li>
-                    <li><a href="">Xe máy></li>
+                    <li><a href="">Xe máy</li>
                     <li><a href="">300cc</a></li>
                     <li><a href="">Benelli</a></li>
                 </ul>
