--- a/detail/MOTOTHETHAOYAMAHA.html
+++ b/detail/MOTOTHETHAOYAMAHA.html
@@ -229,7 +229,7 @@
             <div class="breadcrumbs">
                 <ul>
                     <li><a href="../index.html">Trang chủ</a></li>
-                    <li><a href="">Motor></li>
+                    <li><a href="">Motor</li>
                     <li><a href="">300cc</a></li>
                     <li><a href="">Yamaha</a></li>
                 </ul>
