--- a/gioithieu.html
+++ b/gioithieu.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.min.css">
 
@@ -252,9 +251,20 @@
             Tại đây có tất cả xe máy của những hãng xe nổi tiếng, từ những kiểu xe cũ tới những kiểu xe mới;
             từ những xe máy giá rẻ tới những loại xe máy mắc tiền, chúng tôi đều có hết.
             Hãy ghé ngay <b>Website Chợ Xe Máy</b> của chúng tôi để có thể lựa chọn bất kỳ loại xe nào mà các bạn muốn.
+            <br><br>
+            Thành viên thực hiện: 
+            <br>
+            <b>
+            20049441_Nguyễn Văn Kha  <br>
+            20048521_ Nguyễn Cao Anh Quân<br>
+            20051271_Trần Vĩnh Kha  <br>
+            20049221_ Lê Trung Kiên  <br>
+            20040891_Nguyễn Quốc Đạt  <br>
+            </b>
         </p>
         <br><br>
-        <a href="/Web-main/assets/image/slide/website.png"><img src="/Web-main/assets/image/slide/website.png" alt="" id="website-sample" width="60%" height="500px"></a>
+        <br><br>
+        <a href="./assets/image/slide/website.png"><img src="./assets/image/slide/website.png" alt="" id="website-sample" width="60%" height="500px"></a>
         <h2 id="web_name">Mẫu Web Chợ Xe Máy</h2>
     </main>
     <!-- footer -->
